# holocrawler

./: .env.sample  .gitignore  README.md  README.rst  main.py  pyproject.toml
app/: __init__.py  holocrawler.py  holodule.py  holodules.py  logger.py  settings.py  streamer.py  streamers.py
config/: logger.json
