[tool.poetry]
name = "app"
version = "1.1.0"
description = ""
authors = ["kerobot"]

[tool.poetry.dependencies]
python = "^3.11"
pylint = "^3.0.1"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
selenium = "^4.14.0"
lxml = "^4.9.3"
python-dotenv = "^1.0.0"
pymongo = "^4.5.0"
oauth2client = "^4.1.3"
google-api-python-client = "^2.102.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
